--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ body {
   list-style-type: none;
   font-size: 28px;
   font-weight: 300;
+  line-height: 1.6;
   letter-spacing: 0.34px;
   padding-left: 30px;
 }
